@@ -13986,7 +13986,6 @@ Very High</property>
 </widget>
 
 <widget class="GtkDialog" id="cref_edit">
-  <property name="visible">True</property>
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
